Exercicse 1.7 - Unicafe step 2

--- a/part1/unicafe/src/index.css
+++ b/part1/unicafe/src/index.css
@@ -43,6 +43,11 @@ h1 {
   gap: 1rem;
 }
 
+#root .left p {
+  text-align: left;
+  margin: 0;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
