--- a/part1/unicafe/src/index.css
+++ b/part1/unicafe/src/index.css
@@ -48,6 +48,13 @@ h1 {
   margin: 0;
 }
 
+#root table {
+  margin: 0 auto;
+  border: 1px solid white;
+  padding: 1rem 3rem;
+  border-radius: 4px;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
