--- a/part1/anecdotes/src/index.css
+++ b/part1/anecdotes/src/index.css
@@ -45,8 +45,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-  margin-top: 2rem;
-  margin-right: 1rem;
+  margin: 2rem 1rem;
 }
 button:hover {
   border-color: #646cff;
