--- a/part2/phonebook/src/App.css
+++ b/part2/phonebook/src/App.css
@@ -33,10 +33,15 @@
   }
 }
 
-.card {
-  padding: 2em;
+form {
+  display: flex;
+  flex-direction: column;
 }
 
-.read-the-docs {
-  color: #888;
+button[type="submit"] {
+  align-self: center;
+}
+
+label {
+  margin-bottom: 1rem;
 }
