--- a/part2/phonebook/src/App.css
+++ b/part2/phonebook/src/App.css
@@ -68,7 +68,7 @@ thead > tr > th{
 
 label#search {
   position: absolute;
-  top: 0;
-  right: 0;
+  bottom: 100%;
+  left: 100%;
   font-size: .85rem;
 }
