--- a/part2/countries/src/assets/App.css
+++ b/part2/countries/src/assets/App.css
@@ -46,3 +46,15 @@
   left: 100%;
   top: 0;
 }
+
+.btn-more {
+  padding: 1rem;
+  margin-left: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  img {
+    margin-left: 1rem;
+  }
+}
