--- a/part2/countries/src/assets/App.css
+++ b/part2/countries/src/assets/App.css
@@ -1,50 +1,49 @@
 #root {
   position: relative;
-  max-width: 1280px;
+  width: clamp(320px, 60vw,1440px);
   margin: 5rem auto 0;
   padding: 2rem;
-  /* text-align: center; */
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.work-in-progress {
-  color: crimson;
-  font-weight: 500;
-  font-size: 1.5rem;
 }
 
 .search {
   position: absolute;
-  left: 100%;
+  right: 0;
   top: 0;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  font-size: 1rem;
+  color: rgb(147, 240, 147);
+  
+  input {
+    margin: .5rem 0 0 1rem;
+    padding: 0.25rem;
+    border: 1px solid rgb(87, 128, 87);
+
+    font-size: 1.1rem;
+    color: black;
+
+    outline: none;
+    border-radius: 4px;
+    background-color: rgb(217, 255, 202);
+  }
+
+  input:hover,
+  input:focus {
+    border: 1px solid rgb(147, 240, 147);
+  }
+}
+
+.content {
+  margin-top: 7rem;
+}
+
+.notification {
+  margin-top: 20rem;
+  text-align: center;
+  font-size: 1.125rem;
 }
 
 .btn-more {
@@ -57,4 +56,38 @@
   img {
     margin-left: 1rem;
   }
+}
+
+table {
+  margin: 0 auto;
+
+  td {
+    font-size: 1.125rem;
+  }
+}
+
+.country h1 {
+  text-align: center;
+  margin: 1rem auto 2rem;
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  font-size: 1.125rem;
+  width: 100%;
+  padding: 0 4rem;
+}
+
+.text-content {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: end;
+}
+
+.text-content p {
+  margin: 0;
+  margin-bottom: 1rem;
 }
